                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 29-05-2006 fixed: Various mouse control issues.
 - 29-05-2006 removed: automatic generation of samba bookmarks from settings ( has been replaced with the bookmark the wizard )
 - 29-05-2006 fixed: spaces in samba usernames/passwords where not working.
 - 28-05-2006 fixed: Seekbar could stay on screen after a video calibration of the OSD.
 - 28-05-2006 changed: more logging on shoutcast directory failure, will log recived data if loglevel is in debug.
 - 28-05-2006 fixed: play button was enabled without an arena in kai window.
 - 28-05-2006 fixed: Rename smb folders from videos/music/pictures context menus.
 - 28-05-2006 fixed: Video bookmarks were transparent.
 - 28-05-2006 changed: Moved FileZilla Server.xml to System folder.
 - 28-05-2006 added: [ 1496220 ] <previouswindow> tag to window skin files, allowing the skinner to force the previous window, thanks to lossol93.
 - 28-05-2006 added: [ 1496246 ] xbmc.getInfoLabel(int) & xbmc.getInfoImage(int) to python, thanks to Nuka1195.
 - 28-05-2006 fixed: If no screenshot folder is defined, the screenshot is taken before prompting for the screenshot folder.
 - 28-05-2006 fixed: Filebrowser can now have more than one instance.
 - 27-05-2006 added: localized date/time in directory listings
 - 27-05-2006 fixed: [ 1479058 ] Renaming files/folders on samba shares
 - 27-05-2006 fixed: Invalid temperature assert on boot when temperature control enabled.
 - 27-05-2006 fixed: [ 1493877 ] Problem with weather localisation in swedish
 - 26-05-2006 changed: Skinners can now specify their startup windows and startup.xml will run on all of them.  (Based on patch [ 1482104 ], thanks to lossol93)